--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body, html {
     margin: 0;
     font-family: "Roboto";
 }
+a { color: inherit; 
+    text-decoration: none;
+} 
 
 .background {
     background: 
