--- a/style.css
+++ b/style.css
@@ -7,10 +7,14 @@ body, html {
 a { color: inherit; 
     text-decoration: none;
 } 
+a:visited{
+    color: white;
+    text-decoration: none;
+}
 
 .background {
     background: 
-        linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)), /* This is the dark overlay */
+        linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), /* This is the dark overlay */
         url('wesmoBackGround.jpg');
     background-repeat: no-repeat;
     background-size: cover; 
@@ -79,7 +83,8 @@ h1{
     width: fit-content;
 }
 #imgLogo{
-    width: 270px;
+    padding-top: 10px;
+    width: 200px;
 }
 #typewriter {
     margin-top: 12px;
@@ -123,7 +128,7 @@ h1{
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 1);
+    background-color: black;
     height: 100vh;
     width: 100%;
     z-index: 1000;
